# state_transition_prover

./: README.md
state_prover/: .gitignore
state_prover/host/: Cargo.toml
state_prover/host/src/: main.rs  merkleTree.rs
state_prover/host/src/interface/: mod.rs
state_prover/host/src/interface/input/: input.rs  mod.rs
state_prover/host/src/interface/mlsag/: mlsag.rs  mod.rs  point.rs
state_prover/host/src/interface/pending_transactions/: mod.rs  pending_transaction.rs  pending_user_deposit.rs  pending_user_transaction.rs
state_prover/host/src/interface/range_proof/: mod.rs  rangeProof.rs
state_prover/host/src/interface/utxo/: utxo.rs
state_prover/methods/: Cargo.toml
state_prover/methods/guest/: Cargo.toml
state_prover/methods/guest/src/: main.rs  merkleTree.rs  mod.rs
state_prover/publisher/: cargo.toml
