[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1", features = ["prove"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
web3 = "0.19.0"
serde_json = "1.0.113"
hex = "0.4.3"
petgraph = "0.6.4"
tiny-keccak = "2.0.2"
bonsai-sdk = "0.6.1"
bytemuck = "1.14.3"
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }