[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
web3 = "0.19.0"
serde_json = "1.0.113"
hex = "0.4.3"

[build-dependencies]
risc0-build = { version = "0.20.1" }


[package.metadata.risc0]
methods = ["guest"]
