[package]
name = "state_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.20.1", features = [ "std" ] }
#eth_merkle_tree = "0.1.1"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
keccak-hash = "0.10.0"
serde_json = "1.0.113"
hex = "0.4.3"
#merkle-tree-rs = "0.1.0"
petgraph = "0.6.4"
tiny-keccak = "2.0.2"
